--- a/public/app/partials/login.html
+++ b/public/app/partials/login.html
@@ -31,7 +31,7 @@
                     <input type="checkbox" value="remember-me">记住密码
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit" ng-disabled="signinForm.$invalid">登陆</button>
+            <button class="btn btn-lg btn-primary btn-block" type="submit" ng-disabled="signinForm.$invalid" ng-click="login(user)">登陆</button>
         </form>
     </div>
     </div>
